# Baswap-app

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  aggregation.py  app.py  app_old.py  check_requirement.py  combined_2025-03-02.csv  config.py  data.py  drive_handler.py  gmail_handler.py  hourly_check.py  map_handler.py  model.py  pages.py  plotting.py  pyproject.toml  requirements.txt  requirements_hourly_check.txt  sidebar.py  station_data.py  test.ipynb  thingspeak_retrieve.py  ui_components.py
.github/workflows/: hourly_check.yml  real_time_retrieval.yml  scheduled_ping.yml  thingspeak-retrieval.yml  thingspeak_daily_retrieval.yml  thingspeak_retrieval.yml  update_neon.yml  wake_streamlit.yml
github_actions/: hourly_check.py  requirements_thingspeak_retrieve.txt  thingspeak_retrieve.py  update_neon.py  wake_streamlit.py
lightning_logs/version_100/: events.out.tfevents.1762253604.codespaces-f6c8fb  hparams.yaml
lightning_logs/version_101/: events.out.tfevents.1762253604.codespaces-f6c8fb  hparams.yaml
lightning_logs/version_102/: events.out.tfevents.1762253673.codespaces-f6c8fb  hparams.yaml
lightning_logs/version_103/: events.out.tfevents.1762253673.codespaces-f6c8fb  hparams.yaml
lightning_logs/version_104/: events.out.tfevents.1762253674.codespaces-f6c8fb  hparams.yaml
lightning_logs/version_105/: events.out.tfevents.1762253674.codespaces-f6c8fb  hparams.yaml
models/: neuroforecast_model.py
models/weights/nbeats_24/: dataset.pkl  (+1 more)
scalers/: scaler_vinhlong.pkl
utils/: __init__.py  drive_handler.py
weights/: hourly_max.ckpt
(+209 files in other folders)
