[project]
name = "baswap-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair==5.5.0",
    "black>=26.3.0",
    "detect-secrets>=1.5.0",
    "flake8>=7.3.0",
    "folium==0.20.0",
    "google-api-python-client==2.179.0",
    "google-auth==2.40.3",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.2",
    "matplotlib==3.10.5",
    "neuralforecast==3.0.2",
    "numpy==2.3.2",
    "pandas==2.3.1",
    "playwright>=1.58.0",
    "pre-commit>=4.5.1",
    "pydantic>=2",
    "pydeck==0.9.1",
    "pytorch-lightning==2.5.3",
    "pytz==2025.2",
    "requests==2.32.4",
    "scikit-learn==1.5.2",
    "streamlit==1.48.1",
    "streamlit-folium==0.25.1",
    "torch==2.6.0",
    "torchmetrics==1.8.1",
]
